syntax = "proto3";
option java_package = "com.roc.blog.agent.proto";
//option java_multiple_files = true;


// EchoRequest is the request for echo.
message EchoRequest {
  string message = 1;
}
// EchoResponse is the response for echo.
message EchoResponse {
  string message = 1;
}

service Echo {

  // UnaryEcho is unary echo.
  rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}

  // ServerStreamingEcho is server side streaming.
  rpc ServerStreamingEcho(EchoRequest) returns (stream EchoResponse) {}

  // ClientStreamingEcho is client side streaming.
  rpc ClientStreamingEcho(stream EchoRequest) returns (EchoResponse) {}

  // BidirectionalStreamingEcho is bidi streaming.
  rpc BidirectionalStreamingEcho(stream EchoRequest) returns (stream EchoResponse) {}

}